# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.code-workspace  Engine.hpp
Engine/: Engine.hpp  Makefile
Engine/include/: Application.hpp  Block.hpp  Camera.hpp  Core.hpp  Cube.hpp  EntryPoint.hpp  IRenderable.hpp  ImGuiLayer.hpp  Layer.hpp  LayerStack.hpp  Material.hpp  Mesh.hpp  Primitive.hpp  RayCast.hpp  Rect.hpp  Shader.hpp  Texture.hpp  UIObject.hpp  Vertex.hpp
Engine/src/: Application.cpp  Block.cpp  BoxCollider.cpp  Camera.cpp  Cube.cpp  Layer.cpp  LayerStack.cpp  Mesh.cpp  RayCast.cpp  Shader.cpp  Texture.cpp  Triangle.cpp  UIObject.cpp
Engine/vendors/glad/: CMakeCache.txt  Makefile  cmake_install.cmake
Engine/vendors/glad/New folder/: CMakeCache.txt  Makefile  cmake_install.cmake
Sandbox/: CMakeLists.txt  Makefile
Sandbox/include/: BackgroundLayer.hpp  Block.hpp  ChunkRenderer.hpp  Cursor.hpp  Enums.hpp  SandBox.hpp
Sandbox/resources/: fragment_shader.glsl
Sandbox/src/: BackgroundLayer.cpp  Block.cpp  ChunkRenderer.cpp  Cursor.cpp  InterfaceLayer.cpp  SandboxApp.cpp
include/: Application.hpp  BoxCollider.hpp  Button.hpp  Camera.hpp  Collider.hpp  Core.hpp  Cube.hpp  EntryPoint.hpp  Event.hpp  GUIButton.hpp  GUIInputText.hpp  GUIObject.hpp  GUIText.hpp  GUIView.hpp  GUIWindow.hpp  GameObject.hpp  ImGuiLayer.hpp  InputHandler.hpp  Intersection.hpp  Layer.hpp  LayerStack.hpp  Lights.hpp  Mesh.hpp  MeshGL.hpp  MeshMetal.hpp  OBJLoader.hpp  Primitive.hpp  Ray.hpp  RayCast.hpp  Renderer.hpp  RendererImplGL.hpp  RendererImplMetal.hpp  RenderingContext.hpp  Shader.hpp  ShaderImplGL.hpp  ShaderImplMetal.hpp  ShaderTypesCommon.h  ShaderTypesMetal.h  Sphere.hpp  SphereCollider.hpp  (+7 more)
resources/: fragment_shader.glsl
src/: Application.cpp  BoxCollider.cpp  Button.cpp  Camera.cpp  Cube.cpp  GUIButton.cpp  GUIInputText.cpp  GUIText.cpp  GUIView.cpp  GUIWindow.cpp  GameObject.cpp  ImGuiLayer.cpp  InputHandler.cpp  Layer.cpp  LayerStack.cpp  Material.cpp  Mesh.cpp  OBJLoader.cpp  Primitive.cpp  RayCast.cpp  Rect.cpp  Renderer.cpp  Shader.cpp  Sphere.cpp  SphereCollider.cpp  Texture.cpp  Transform.cpp  Triangle.cpp  UIObject.cpp
src/RenderingBackends/: MeshGL.cpp  MeshMetal.cpp  RendererImplGL.cpp  RendererImplMetal.cpp  ShaderImplGL.cpp  ShaderImplMetal.cpp  TextureImplGL.cpp  TextureImplMetal.cpp
